hphp/test/zend/good/ext-standard-general_functions/bug42272.php
<?php
$foo = var_export("\0", true );
echo $foo, "\n";
var_export("a\0b");
?>