hphp/test/zend/bad/Zend/tests/bug39304.php
<?php 
  $s = "";
  list($a, $b) = $s[0];
echo "I am alive";
?>